--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -79,6 +79,9 @@
 
         // 카드
         @include defaultCardTemplate();
+
+        // view
+        @include commonViewTemplate();
       }
 
       // 리스트
